Make p2 repo self contained

--- a/com.codeaffine.gonsole.releng/repository/pom.xml
+++ b/com.codeaffine.gonsole.releng/repository/pom.xml
@@ -64,9 +64,14 @@
         </executions>
         <configuration>
           <source>
-            <!-- Repository for Guava -->
+            <!-- Repository for Guava, Args4J, Apache Commons Compress -->
             <repository>
               <url>http://download.eclipse.org/tools/orbit/downloads/drops/R20140525021250/repository/</url>
+              <layout>p2</layout>
+            </repository>
+            <!-- Repository for JGit -->
+            <repository>
+              <url>http://download.eclipse.org/egit/updates/</url>
               <layout>p2</layout>
             </repository>
           </source>
@@ -77,6 +82,62 @@
                   id == $0 &amp;&amp; version &gt;= $1 &amp;&amp; version &lt; $2
                 </expression>
                 <parameters>com.google.guava,12.0.0,13.0.0</parameters>
+              </query>
+            </iu>
+            <iu>
+              <query>
+                <expression>
+                  id == $0 &amp;&amp; version &gt;= $1 &amp;&amp; version &lt; $2
+                </expression>
+                <parameters>org.apache.commons.compress,1.4.0,2.0.0</parameters>
+              </query>
+            </iu>
+            <iu>
+              <query>
+                <expression>
+                  id == $0 &amp;&amp; version &gt;= $1 &amp;&amp; version &lt; $2
+                </expression>
+                <parameters>org.kohsuke.args4j,2.0.21,2.1.0</parameters>
+              </query>
+            </iu>
+            <iu>
+              <query>
+                <expression>
+                  id == $0 &amp;&amp; version &gt;= $1 &amp;&amp; version &lt; $2
+                </expression>
+                <parameters>org.eclipse.jgit.archive,3.3.2,4.0.0</parameters>
+              </query>
+            </iu>
+            <iu>
+              <query>
+                <expression>
+                  id == $0 &amp;&amp; version &gt;= $1 &amp;&amp; version &lt; $2
+                </expression>
+                <parameters>org.eclipse.jgit,3.3.2,4.0.0</parameters>
+              </query>
+            </iu>
+            <iu>
+              <query>
+                <expression>
+                  id == $0 &amp;&amp; version &gt;= $1 &amp;&amp; version &lt; $2
+                </expression>
+                <parameters>org.eclipse.jgit.java7,3.3.0,4.0.0</parameters>
+              </query>
+            </iu>
+            <iu>
+              <query>
+                <expression>
+                  id == $0 &amp;&amp; version &gt;= $1 &amp;&amp; version &lt; $2
+                </expression>
+                <parameters>javaewah,0.7.9,0.8.0</parameters>
+              </query>
+            </iu>
+            <iu>
+              <query>
+                <expression>
+                  id == $0 &amp;&amp; version &gt;= $1 &amp;&amp; version &lt; $2
+                </expression>
+                <parameters>com.jcraft.jsch,0.1.50,0.2.0</parameters>
               </query>
             </iu>
           </ius>
