Attempt to deploy p2 repository to GitHub Pages, take two

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,8 @@ env:
     secure: AH6JUSKRpfmfU/K0VqTBtwEZSNCUcP+JEYIWSNQ/HtbBXAPKfEp91ywOlRb6KQUv0anFtZH2UFL7C0CFY81sALfMEWKQXwi7SH4RjgO4mAfT6tmWb+CgeS98M2sY8oEnfX/Riv3cxvz1Yrq1vijZMY1GV3/TuBHKEMYecjMS1Ss=
 language: java
 jdk:
-- openjdk6
+  - openjdk6
 script: mvn -f com.codeaffine.gonsole.releng/pom.xml clean verify
-after_success: ./.travis-deploy.sh
+after_success: 
+  - chmod a+x .travis-deploy.sh
+  - ./.travis-deploy.sh
