Add image to console extension

--- a/com.codeaffine.gonsole/plugin.xml
+++ b/com.codeaffine.gonsole/plugin.xml
@@ -5,6 +5,7 @@
          point="org.eclipse.ui.console.consoleFactories">
       <consoleFactory
             class="com.codeaffine.gonsole.internal.GitConsoleFactory"
+            icon="icons/etool16/gonsole.png"
             label="Interactive Git Console">
       </consoleFactory>
    </extension>
