--- a/com.codeaffine.gonsole.pdetest/.settings/org.moreunit.prefs
+++ b/com.codeaffine.gonsole.pdetest/.settings/org.moreunit.prefs
@@ -2,5 +2,5 @@ eclipse.preferences.version=1
 org.moreunit.preferences.version=2
 org.moreunit.test.test_methodDefaultContent=Assert.fail()
 org.moreunit.testClassNameTemplate=${srcFile}(Test|PDETest)
-org.moreunit.unitsourcefolder=com.codeaffine.gonsole.test\:src\:com.codeaffine.gonsole\:src
+org.moreunit.unitsourcefolder=com.codeaffine.gonsole.pdetest\:src\:com.codeaffine.gonsole\:src
 org.moreunit.useprojectsettings=true
