--- a/com.codeaffine.gonsole.releng/repository/pom.xml
+++ b/com.codeaffine.gonsole.releng/repository/pom.xml
@@ -169,7 +169,7 @@
               <appArgLine>-application org.eclipse.wtp.releng.tools.addRepoProperties</appArgLine>
               <argLine>
                 -DartifactRepoDirectory=${project.build.directory}/repository
-                -Dp2StatsURI=http://codeaffine.com/p2-stats
+                -Dp2StatsURI=http://www.codeaffine.com/p2-stats
                 -DstatsTrackedArtifacts=com.codeaffine.gonsole.feature
                 -DstatsArtifactsSuffix=-${project.version}
               </argLine>
