--- a/com.codeaffine.gonsole.pdetest/build.properties
+++ b/com.codeaffine.gonsole.pdetest/build.properties
@@ -1,7 +1,8 @@
 source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
-               .
+               .,\
+               fragment.xml
 javacDefaultEncoding.. = UTF-8
 jre.compilation.profile = JavaSE-1.6
 javacSource = 1.6
