--- a/com.codeaffine.gonsole/build.properties
+++ b/com.codeaffine.gonsole/build.properties
@@ -3,7 +3,8 @@ output.. = bin/
 bin.includes = META-INF/,\
                icons/,\
                .,\
-               plugin.xml
+               plugin.xml,\
+               schema/
 javacDefaultEncoding.. = UTF-8
 jre.compilation.profile = JavaSE-1.6
 javacSource = 1.6
