--- a/com.codeaffine.gonsole/plugin.xml
+++ b/com.codeaffine.gonsole/plugin.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?eclipse version="3.4"?>
 <plugin>
+   <extension-point
+      id="repositoryProviders"
+      name="Repository Providers"
+      schema="schema/repositoryProviders.exsd"/>
+
    <extension
          point="org.eclipse.ui.console.consoleFactories">
       <consoleFactory
