Provide preference page to specify repository locations
This change introduces a 'Repository Locations' preference page in which
users can enter locations of repositries. To these repositories can then
be switched to with 'cr repo', where 'repo' is the before-last segment of
the repository directory. E.g. /path/to/foo/.git would be named 'foo'.
If the git console is opened for the first time, the first repository
is the current one.

Related issue: #4

--- a/com.codeaffine.gonsole/plugin.xml
+++ b/com.codeaffine.gonsole/plugin.xml
@@ -14,5 +14,45 @@
             label="Interactive Git Console">
       </consoleFactory>
    </extension>
+   <extension
+         point="org.eclipse.core.runtime.preferences">
+      <initializer
+            class="com.codeaffine.gonsole.internal.preference.WorkspaceScopePreferencesInitializer">
+      </initializer>
+   </extension>
+   <extension
+         point="org.eclipse.ui.preferencePages">
+      <page
+            category="org.eclipse.team.ui.TeamPreferences"
+            class="com.codeaffine.gonsole.internal.preference.ConsolePreferencePage"
+            id="com.codeaffine.gonsole.internal.preference.ConsolePreferencePage"
+            name="Git Console">
+         <keywordReference
+               id="com.codeaffine.gonsole.internal.keyword.PreferencePage">
+         </keywordReference>
+      </page>
+      <page
+            category="com.codeaffine.gonsole.internal.preference.ConsolePreferencePage"
+            class="com.codeaffine.gonsole.internal.preference.RepositoryPreferencePage"
+            id="com.codeaffine.gonsole.internal.preference.RepositoryPreferencePage"
+            name="Repository Locations">
+         <keywordReference
+               id="com.codeaffine.gonsole.internal.keyword.PreferencePage">
+         </keywordReference>
+      </page>
+   </extension>
+   <extension
+         point="org.eclipse.ui.keywords">
+      <keyword
+            id="com.codeaffine.gonsole.internal.keyword.PreferencePage"
+            label="git console repository team ">
+      </keyword>
+   </extension>
+   <extension
+         point="com.codeaffine.gonsole.repositoryProviders">
+      <repositoryProvider
+            class="com.codeaffine.gonsole.internal.repository.PreferenceRepositoryProvider">
+      </repositoryProvider>
+   </extension>
 
 </plugin>
