Try to activate X Virtual Framebuffer for headless GUI builds on travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,10 @@ branches:
   only:
     - master
 script: mvn -f com.codeaffine.gonsole.releng/pom.xml clean verify
+before_script:
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"
+  - sleep 3 # give xvfb some time to start
 after_success: 
   - chmod a+x .travis-deploy.sh
   - ./.travis-deploy.sh
