Introduction of com.codeaffine.gonsole.test.helper bundle
This bundle provides test helper classes that can be used in both
test fragments of com.codeaffine.gonsole

--- a/com.codeaffine.gonsole.releng/pom.xml
+++ b/com.codeaffine.gonsole.releng/pom.xml
@@ -27,9 +27,11 @@
     <module>egit-feature</module>
  -->    
     <module>repository</module>
+    
     <module>../com.codeaffine.gonsole</module>
-    <module>../com.codeaffine.gonsole.test</module>
     <module>../com.codeaffine.gonsole.pdetest</module>
+    <module>../com.codeaffine.gonsole.test</module>
+    <module>../com.codeaffine.gonsole.test.helper</module>
 <!-- 
     <module>../com.codeaffine.gonsole.egit</module>
     <module>../com.codeaffine.gonsole.egit.pdetest</module>
