Remove 'interactive' from UI labels
Instead of 'Interactive Git Console' the console is now labelled just
'Git Console'.

--- a/com.codeaffine.gonsole.releng/core-feature/feature.properties
+++ b/com.codeaffine.gonsole.releng/core-feature/feature.properties
@@ -1,5 +1,5 @@
 
-description = Gonsole is an interactive Git Console for the Eclipse IDE
+description = Gonsole is a Git Console for the Eclipse IDE
 
 copyright = \
 Copyright (c) 2014 Frank Appel & Rüdiger Herrmann\n\
