--- a/com.codeaffine.console.core.pdetest/.settings/org.moreunit.prefs
+++ b/com.codeaffine.console.core.pdetest/.settings/org.moreunit.prefs
@@ -2,5 +2,5 @@ eclipse.preferences.version=1
 org.moreunit.preferences.version=2
 org.moreunit.test.test_methodDefaultContent=
 org.moreunit.testClassNameTemplate=${srcFile}(Test|PDETest)
-org.moreunit.unitsourcefolder=com.codaffine.console.core.test\:src\:com.codeaffine.console.core\:src
+org.moreunit.unitsourcefolder=com.codeaffine.console.core.pdetest\:src\:com.codeaffine.console.core\:src
 org.moreunit.useprojectsettings=true
