--- a/com.codeaffine.gonsole.egit/.settings/org.moreunit.prefs
+++ b/com.codeaffine.gonsole.egit/.settings/org.moreunit.prefs
@@ -1,4 +1,5 @@
 eclipse.preferences.version=1
 org.moreunit.preferences.version=2
+org.moreunit.testClassNameTemplate=${srcFile}(Test|PDETest)
 org.moreunit.unitsourcefolder=com.codeaffine.gonsole.egit\:src\:com.codeaffine.gonsole.egit.pdetest\:src
 org.moreunit.useprojectsettings=true
