--- a/com.codeaffine.gonsole/plugin.xml
+++ b/com.codeaffine.gonsole/plugin.xml
@@ -9,21 +9,10 @@
    <extension
          point="org.eclipse.ui.console.consoleFactories">
       <consoleFactory
-            class="com.codeaffine.gonsole.internal.GitConsoleFactory"
+            class="com.codeaffine.gonsole.GitConsoleFactory"
             icon="icons/etool16/gonsole.png"
             label="Git Console">
       </consoleFactory>
-   </extension>
-   <extension
-         point="org.eclipse.ui.console.consolePageParticipants">
-      <consolePageParticipant
-            class="com.codeaffine.console.core.internal.GenericConsolePageParticipant"
-            id="com.codeaffine.console.core.internal.GenericConsolePageParticipant">
-         <enablement>
-            <instanceof
-                  value="com.codeaffine.console.core.internal.GenericConsole">
-            </instanceof></enablement>
-      </consolePageParticipant>
    </extension>
    <extension
          point="org.eclipse.core.runtime.preferences">
