--- a/.travis.yml
+++ b/.travis.yml
@@ -1,20 +1,37 @@
 env:
   global:
     secure: AH6JUSKRpfmfU/K0VqTBtwEZSNCUcP+JEYIWSNQ/HtbBXAPKfEp91ywOlRb6KQUv0anFtZH2UFL7C0CFY81sALfMEWKQXwi7SH4RjgO4mAfT6tmWb+CgeS98M2sY8oEnfX/Riv3cxvz1Yrq1vijZMY1GV3/TuBHKEMYecjMS1Ss=
+
+install: true
+
+before_install:
+  - sudo apt-get update
+  - sudo apt-get install gnome-themes-standard
+  - sudo apt-get install metacity
+  - sudo apt-get install libwebkit-dev
+ 
 language: java
+
 jdk:
   - openjdk6
+
 branches:
   only:
     - master
+
 script: mvn -f com.codeaffine.gonsole.releng/pom.xml clean verify
+
 before_script:
   - "export DISPLAY=:99.0"
-  - "sh -e /etc/init.d/xvfb start"
-  - sleep 3 # give xvfb some time to start
+  - sh -e /etc/init.d/xvfb start
+  - sleep 5
+  - metacity --sm-disable --replace &
+  - sleep 5
+ 
 after_success: 
   - chmod a+x .travis-deploy.sh
   - ./.travis-deploy.sh
+
 after_failure:
   - cat com.codeaffine.console.core.pdetest/target/surefire-reports/*.txt
   - cat com.codeaffine.gonsole.pdetest/target/surefire-reports/*.txt
