--- a/.travis.yml
+++ b/.travis.yml
@@ -20,8 +20,7 @@ branches:
     - master
 
 script: 
-  - mvn -f com.codeaffine.gonsole.releng/pom.xml clean verify -Dtarget-platform-classifier=eclipse-3.8
-  - mvn -f com.codeaffine.gonsole.releng/pom.xml clean verify -Dtarget-platform-classifier=eclipse-4.4
+  - mvn -q -f com.codeaffine.gonsole.releng/pom.xml clean verify -Dtarget-platform-classifier=eclipse-4.4
 
 before_script:
   - "export DISPLAY=:99.0"
