--- a/com.codeaffine.gonsole.releng/pom.xml
+++ b/com.codeaffine.gonsole.releng/pom.xml
@@ -12,8 +12,8 @@
   <packaging>pom</packaging>
 
   <properties>
-    <tycho-version>0.21.0</tycho-version>
-    <tycho-extras-version>0.21.0</tycho-extras-version>
+    <tycho-version>0.22.0</tycho-version>
+    <tycho-extras-version>0.22.0</tycho-extras-version>
     <target-platform-classifier>eclipse-4.4</target-platform-classifier>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
@@ -97,6 +97,15 @@
         </configuration>
       </plugin>
 
+      <plugin>
+        <groupId>org.eclipse.tycho</groupId>
+        <artifactId>tycho-compiler-plugin</artifactId>
+        <version>${tycho-version}</version>
+        <configuration>
+          <useProjectSettings>true</useProjectSettings>
+        </configuration>
+      </plugin>
+      
       <plugin>
         <groupId>org.eclipse.tycho</groupId>
         <artifactId>tycho-source-plugin</artifactId>
