Adjust dependency version ranges to work with Eclipse Mars
With Eclipse 4.5 (Mars) EGit and JGit changed their version to 4.x to
allow for breaking API changes.
Luckily, Gonsole is not affected from these API changes. Changing the
version range for dependencies on EGit and JGit to [3.7,5.0) allows to
continue to work with older versions of Eclipse/EGit and also support
Mars.

See #53 Gonsole EGit integration not installable on Eclipse Mars

--- a/com.codeaffine.gonsole.releng/repository/pom.xml
+++ b/com.codeaffine.gonsole.releng/repository/pom.xml
@@ -66,7 +66,7 @@
           <source>
             <!-- Repository for Guava, Args4J, Apache Commons Compress -->
             <repository>
-              <url>http://download.eclipse.org/tools/orbit/downloads/drops/R20140525021250/repository/</url>
+              <url>http://download.eclipse.org/tools/orbit/downloads/drops/R20150519210750/repository/</url>
               <layout>p2</layout>
             </repository>
             <!-- Repository for JGit -->
@@ -167,6 +167,14 @@
                   id == $0 &amp;&amp; version &gt;= $1 &amp;&amp; version &lt; $2
                 </expression>
                 <parameters>com.jcraft.jsch,0.1.50,0.2.0</parameters>
+              </query>
+            </iu>
+            <iu>
+              <query>
+                <expression>
+                  id == $0 &amp;&amp; version &gt;= $1 &amp;&amp; version &lt; $2
+                </expression>
+                <parameters>org.slf4j.api,1.7.0,2.0.0</parameters>
               </query>
             </iu>
           </ius>
