--- a/com.codeaffine.console.calculator/build.properties
+++ b/com.codeaffine.console.calculator/build.properties
@@ -4,3 +4,6 @@ bin.includes = META-INF/,\
                .,\
                plugin.xml,\
                icons/
+jre.compilation.profile = JavaSE-1.7
+javacSource = 1.7
+javacTarget = 1.7
