--- a/com.codeaffine.gonsole.branding/build.properties
+++ b/com.codeaffine.gonsole.branding/build.properties
@@ -1,3 +1,6 @@
 bin.includes = META-INF/,\
                about.ini,\
                gonsole.png
+jre.compilation.profile = JavaSE-1.7
+javacSource = 1.7
+javacTarget = 1.7
