--- a/com.codeaffine.gonsole.test.helper/build.properties
+++ b/com.codeaffine.gonsole.test.helper/build.properties
@@ -2,3 +2,6 @@ source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
                .
+jre.compilation.profile = JavaSE-1.7
+javacSource = 1.7
+javacTarget = 1.7
