--- a/com.codeaffine.gonsole.releng/repository/pom.xml
+++ b/com.codeaffine.gonsole.releng/repository/pom.xml
@@ -97,6 +97,14 @@
                 <parameters>org.apache.commons.compress,1.4.0,2.0.0</parameters>
               </query>
             </iu>
+            <iu> <!-- used by org.eclipse.jgit.http.apache -->
+              <query>
+                <expression>
+                  id == $0 &amp;&amp; version &gt;= $1 &amp;&amp; version &lt; $2
+                </expression>
+                <parameters>org.apache.commons.logging,1.1.1,2.0.0</parameters>
+              </query>
+            </iu>
             <iu>
               <query>
                 <expression>
@@ -127,6 +135,14 @@
                   id == $0 &amp;&amp; version &gt;= $1 &amp;&amp; version &lt; $2
                 </expression>
                 <parameters>org.eclipse.jgit.pgm,4.2.0,5.0.0</parameters>
+              </query>
+            </iu>
+            <iu>
+              <query>
+                <expression>
+                  id == $0 &amp;&amp; version &gt;= $1 &amp;&amp; version &lt; $2
+                </expression>
+                <parameters>org.eclipse.jgit.http.apache,4.2.0,5.0.0</parameters>
               </query>
             </iu>
             <iu>
