--- a/com.codeaffine.gonsole.test.all/.classpath
+++ b/com.codeaffine.gonsole.test.all/.classpath
@@ -3,5 +3,7 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/com.codeaffine.console.core.test"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/com.codeaffine.gonsole.test"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
