--- a/.travis.yml
+++ b/.travis.yml
@@ -23,8 +23,8 @@ addons:
     - libwebkit-dev
     
 script:
-  - mvn -q -f com.codeaffine.gonsole.releng/pom.xml clean verify -Dtarget-platform-classifier=eclipse-4.4
-  - mvn -q -f com.codeaffine.gonsole.releng/pom.xml clean verify -Dtarget-platform-classifier=eclipse-4.5
+  - mvn -f com.codeaffine.gonsole.releng/pom.xml clean verify -Dtarget-platform-classifier=eclipse-4.4
+  - mvn -f com.codeaffine.gonsole.releng/pom.xml clean verify -Dtarget-platform-classifier=eclipse-4.5
 
 before_script:
   - "export DISPLAY=:99.0"
