--- a/com.codeaffine.gonsole.releng/pom.xml
+++ b/com.codeaffine.gonsole.releng/pom.xml
@@ -22,6 +22,18 @@
     <maven>3.0</maven>
   </prerequisites>
 
+  <profiles>
+    <profile>
+      <id>macos-jvm-flags</id>
+      <activation>
+        <os><family>mac</family></os>
+      </activation>
+      <properties>
+        <os-jvm-flags>-XstartOnFirstThread</os-jvm-flags>
+      </properties>
+    </profile>
+  </profiles>
+  
   <modules>
   
     <!-- features -->
@@ -125,7 +137,7 @@
         <artifactId>tycho-surefire-plugin</artifactId>
         <version>${tycho-version}</version>
         <configuration>
-          <argLine>-Xmx512m</argLine>
+          <argLine>-Xmx512m ${os-jvm-flags}</argLine>
           <useUIHarness>true</useUIHarness>
           <appArgLine>-nl en -consolelog</appArgLine>
           <dependencies>
