--- a/com.codeaffine.gonsole.releng/pom.xml
+++ b/com.codeaffine.gonsole.releng/pom.xml
@@ -16,6 +16,7 @@
     <tycho-extras-version>0.26.0</tycho-extras-version>
     <target-platform-classifier>eclipse-4.5</target-platform-classifier>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <os-jvm-flags/>
   </properties>
 
   <prerequisites>
