Use maven wrapper in CI build
Change the Travis Ci build instructions to invoke the maven wrapper to
build and test the software.

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,9 +23,9 @@ addons:
     - libwebkit-dev
 
 script:
-  - mvn -q -f com.codeaffine.gonsole.releng/pom.xml clean verify -Dtarget-platform-classifier=eclipse-4.5
-  - mvn -q -f com.codeaffine.gonsole.releng/pom.xml clean verify -Dtarget-platform-classifier=eclipse-4.7
-  - mvn -q -f com.codeaffine.gonsole.releng/pom.xml clean verify -Dtarget-platform-classifier=eclipse-4.8
+  - ./mvnw -q -f com.codeaffine.gonsole.releng/pom.xml clean verify -Dtarget-platform-classifier=eclipse-4.5
+  - ./mvnw -q -f com.codeaffine.gonsole.releng/pom.xml clean verify -Dtarget-platform-classifier=eclipse-4.7
+  - ./mvnw -q -f com.codeaffine.gonsole.releng/pom.xml clean verify -Dtarget-platform-classifier=eclipse-4.8
 
 before_script:
   - "export DISPLAY=:99.0"
